<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ActivityDetalji">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#b8342d"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/naziv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/naziv"
                android:textColor="#8E201B"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/naziv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/mjesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/mjesto"
                android:textColor="#8E201B"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mjesto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/godina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/godina"
                android:textColor="#8E201B"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/godina2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/velicina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/velicina"
                android:textColor="#8E201B"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/velicina2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/jezik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/jezik"
                android:textColor="#8E201B"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jezik2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/pismo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/pismo"
                android:textColor="#8E201B"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pismo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/sadrzaj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/sadrzaj1"
                android:textColor="#8E201B"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sadrzaj2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/zanimljivosti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/zanimljivosti"
                android:textColor="#8E201B"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/zanimljivosti2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp" />

            <Button
                android:id="@+id/nazad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="10dp"
                android:background="#b8342d"
                android:text="@string/natrag"
                android:textColor="#ffffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>