<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ffos.tim4m.glagopedija.Activity.MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8E201B"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/glagoljica_abeceda" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/glagopedija"></ImageView>

            <Button
                android:id="@+id/btnzapocnimo"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center|bottom"
                android:background="#F28D28"
                android:text="Započnimo"
                android:textColor="#8E201B"
                android:textStyle="bold"></Button>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

            <ImageView
                android:id="@+id/imageScroll"
                android:layout_width="107dp"
                android:layout_height="50dp"
                android:layout_gravity="left|bottom"
                app:srcCompat="@drawable/scroll" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">


            <!-- O projektu-->
            <RelativeLayout
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="20dp"
                android:background="@drawable/curve_background">

                <RelativeLayout
                    android:id="@+id/org"
                    android:layout_width="30dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:background="#F28D28">
                </RelativeLayout>

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/org"
                    android:text="@string/about"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#8E201B"
                    />
                <TextView
                    android:layout_below="@id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opis"
                    android:layout_toEndOf="@id/org"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="20dp"
                    android:textColor="#141414"
                    android:textSize="13sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <!--Cilj projekta-->

            <RelativeLayout
                android:id="@+id/two"
                android:layout_below="@id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="20dp"
                android:background="@drawable/curve_background">

                <RelativeLayout
                    android:id="@+id/org1"
                    android:layout_width="30dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:background="#F28D28">
                </RelativeLayout>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/org1"
                    android:text="@string/cilj"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#8E201B"
                    />
                <TextView
                    android:layout_below="@id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opis2"
                    android:layout_toEndOf="@id/org1"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="20dp"
                    android:textColor="#141414"
                    android:textSize="13sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <!--Cilj projekta-->

            <RelativeLayout
                android:id="@+id/three"
                android:layout_below="@id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="20dp"
                android:background="@drawable/curve_background">

                <RelativeLayout
                    android:id="@+id/org2"
                    android:layout_width="30dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:background="#F28D28">
                </RelativeLayout>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/org2"
                    android:text="@string/sadrzaj"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#8E201B"
                    />
                <TextView
                    android:layout_below="@id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opis3"
                    android:layout_toEndOf="@id/org2"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="20dp"
                    android:textColor="#141414"
                    android:textSize="13sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <!--komu je namijenjena-->

            <RelativeLayout
                android:layout_below="@id/three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="20dp"
                android:background="@drawable/curve_background">

                <RelativeLayout
                    android:id="@+id/org3"
                    android:layout_width="30dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp"
                    android:background="#F28D28">
                </RelativeLayout>

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/org3"
                    android:text="@string/namijenjenost"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#8E201B"
                    />
                <TextView
                    android:layout_below="@id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opis4"
                    android:layout_toEndOf="@id/org3"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="50dp"
                    android:textColor="#141414"
                    android:textSize="13sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>





</androidx.coordinatorlayout.widget.CoordinatorLayout>